2002-11-21  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/syscalls.list (s_exit_group): Add it.
	From Ian Wienand <ianw@gelato.unsw.edu.au>.

	* sysdeps/unix/sysv/linux/ia64/sysdep.h (__NR_pread): Define to
	__NR_pread64 if not defined.
	(__NR_pwrite): Define to __NR_pwrite64 if not defined.
	From Ian Wienand <ianw@gelato.unsw.edu.au>.

2002-11-21  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (tests): Don't run test-arrayX tests for now.

	* sysdeps/unix/sysv/linux/bits/sched.h: Add new CLONE_* flags.
	* sysdeps/unix/sysv/linux/i386/clone.S: Add support for
	CLONE_CHILD_*TID flags.

2002-11-20  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/sigcontextinfo.h (SIGCONTEXT):
	We pass struct ucontext on x86-64.
	(GET_PC): Adjust.
	(GET_FRAME): Adjust.
	(GET_STACK): Adjust.

2002-11-20  Roland McGrath  <roland@redhat.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c [! SHARED]: Further
	conditionalize [! DO_VERSIONING] #error.

	* scripts/abilist.awk: Grok function descriptor symbols.

	* intl/tst-gettext.c (main): Check return values from setlocale.
	Add necessary unsetenv's to make LANG=existing-locale check work.

	* intl/tst-gettext.sh: Use mkdir -p.  Copy test files unconditionally,
	so aborted prior runs don't confuse things.

	* locale/localeinfo.h (struct locale_data: union locale_data_value):
	Use uintptr_t instead of unsigned int for `word' member.
	(_NL_CURRENT_WORD): Cast to uint32_t.

	* posix/bug-regex5.c (main): Use union to extract _NL_COLLATE_NRULES
	value.

2002-11-20  Ulrich Drepper  <drepper@redhat.com>

	* elf/tls-macros.h: Add IA-64 definitions.
	Patch by Ian Wienand <ianw@gelato.unsw.edu.au>.

	* iconv/Makefile (tests): Add tst-iconv4.
	* iconv/tst-iconv4.c: New file.

	* iconv/gconv_simple.c (internal_ucs4le_loop_unaligned): Return
	__GCONV_EMPTY_INPUT only if input is really empty.  Otherwise
	__GCONV_INCOMPLETE_INPUT.
	(ucs4le_internal_loop): Likewise.
	(ucs4le_internal_loop_unaligned): Likewise.